# aero-accelerator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/accelerator/: __init__.py  aero_frontend.py  blueprint_parser.py  cli.py  errors.py  translator.py
src/accelerator/precision_shield/: __init__.py  shield.py
src/accelerator/scaffold/: __init__.py  engine.py
src/accelerator/templates/: Cargo.toml  lib.rs
tests/: test_4_bitwise.py  test_bitwise_unpack.py  test_imports.py  test_integration.py  test_mandelbrot.py  test_regression.py
tests/unit/: test_config.py  test_engine.py  test_errors.py
