[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accelerator"
version = "0.2.0"
description = "Graph-based Python to Rust JIT compiler."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "networkx",
    "tree-sitter",
    "z3-solver",
]

[project.scripts]
accelerate = "accelerator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["accelerator*"]

[tool.setuptools.package-data]
accelerator = ["templates/*"]
