[package]
name = "{crate_name}"
version = "0.1.0"
edition = "2021"

[lib]
name = "{crate_name}"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {{ version = "0.20", features = ["extension-module"] }}
# rug 1.24 is required by the precision shield; az is pinned to a version
# compatible with the Cargo/Rust toolchain that ships with this package.
rug = {{ version = "=1.24.0", features = ["integer"] }}
az = "=1.2.1"
